--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
         os:
           - linux
           - windows
+          - darwin
         go-version:
           - 1.19.5
         include:
@@ -97,31 +98,33 @@ jobs:
             --file=${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}.${{ matrix.os }}-${{ matrix.arch }}.tgz \
             --directory=bin/ \
             .
-      #- name: create package deb
-      #  uses: bpicode/github-action-fpm@master
-      #  with:
-      #    fpm_opts:
-      #      --name ${{ github.event.repository.name }}
-      #      --version ${{ steps.release-version.outputs.RELEASE_VERSION }}
-      #      --architecture ${{ matrix.arch }}
-      #      --exclude '*/.gitignore'
-      #      --exclude '*/.git'
-      #      --input-type dir
-      #      --output-type deb
-      #    fpm_args: ./bin
-      #- name: create package rpm
-      #  uses: bpicode/github-action-fpm@master
-      #  with:
-      #    fpm_opts:
-      #      --name ${{ github.event.repository.name }}
-      #      --version ${{ steps.release-version.outputs.RELEASE_VERSION }}
-      #      --architecture ${{ matrix.rpm_arch }}
-      #      --exclude '*/.gitignore'
-      #      --exclude '*/.git'
-      #      --input-type dir
-      #      --output-type rpm
-      #    fpm_args: ./bin
-      # }}
+      - name: create package deb
+        if: matrix.os == 'linux'
+        uses: bpicode/github-action-fpm@master
+        with:
+          fpm_opts:
+            --name ${{ github.event.repository.name }}
+            --version ${{ steps.release-version.outputs.RELEASE_VERSION }}
+            --architecture ${{ matrix.arch }}
+            --exclude '*/.gitignore'
+            --exclude '*/.git'
+            --input-type dir
+            --output-type deb
+          fpm_args: ./bin
+      - name: create package rpm
+        if: matrix.os == 'linux'
+        uses: bpicode/github-action-fpm@master
+        with:
+          fpm_opts:
+            --name ${{ github.event.repository.name }}
+            --version ${{ steps.release-version.outputs.RELEASE_VERSION }}
+            --architecture ${{ matrix.rpm_arch }}
+            --exclude '*/.gitignore'
+            --exclude '*/.git'
+            --input-type dir
+            --output-type rpm
+          fpm_args: ./bin
+       }}
 
       - name: debug
         run: |
@@ -148,23 +151,25 @@ jobs:
           asset_name: ${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}.${{ matrix.os }}-${{ matrix.arch }}.tgz
           asset_content_type: application/gzip
 
-      #- name: upload-release-asset deb
-      #  uses: actions/upload-release-asset@v1
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #  with:
-      #    upload_url: ${{ needs.create_release.outputs.upload_url }}
-      #    asset_path: ./${{ github.event.repository.name }}_${{ steps.release-version.outputs.RELEASE_VERSION }}_${{ matrix.arch }}.deb
-      #    asset_name: ${{ github.event.repository.name }}_${{ steps.release-version.outputs.RELEASE_VERSION }}_${{ matrix.arch }}.deb
-      #    asset_content_type: application/octet-stream
+      - name: upload-release-asset deb
+        if: matrix.os == 'linux'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          asset_path: ./${{ github.event.repository.name }}_${{ steps.release-version.outputs.RELEASE_VERSION }}_${{ matrix.arch }}.deb
+          asset_name: ${{ github.event.repository.name }}_${{ steps.release-version.outputs.RELEASE_VERSION }}_${{ matrix.arch }}.deb
+          asset_content_type: application/octet-stream
 
-      #- name: upload-release-asset rpm
-      #  uses: actions/upload-release-asset@v1
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #  with:
-      #    upload_url: ${{ needs.create_release.outputs.upload_url }}
-      #    asset_path: ./${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}-1.${{ matrix.rpm_arch }}.rpm
-      #    asset_name: ${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}-1.${{ matrix.rpm_arch }}.rpm
-      #    asset_content_type: application/octet-stream
+      - name: upload-release-asset rpm
+        if: matrix.os == 'linux'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          asset_path: ./${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}-1.${{ matrix.rpm_arch }}.rpm
+          asset_name: ${{ github.event.repository.name }}-${{ steps.release-version.outputs.RELEASE_VERSION }}-1.${{ matrix.rpm_arch }}.rpm
+          asset_content_type: application/octet-stream
       # }}
