--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,12 +77,12 @@ jobs:
       #- name: unit tests
       #  run: make test
 
+      - name: test default config generation
+        run: go run any-sync-network/main.go create --defaults
+
       - name: build
         run: make build BUILD_GOOS=${{ matrix.os}} BUILD_GOARCH=${{ matrix.arch }}
       # }}
-
-      - name: test default config generation
-        run: ./bin/any-sync-network create --defaults
 
       - name: get release version
         id: release-version
