--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -5,7 +5,7 @@ name: build_and_test
 
 jobs:
   build:
-    name: build release
+    name: build and test
     runs-on: ubuntu-22.04
     strategy:
       matrix:
