--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions: write-all
 jobs:
   build:
     name: build release
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         arch:
@@ -22,7 +22,7 @@ jobs:
           - windows
           - darwin
         go-version:
-          - '1.23'
+          - '1.24'
         include:
           - arch: amd64
             rpm_arch: x86_64
