--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -1,6 +1,8 @@
 on:
-  release:
-    types: [published]
+  # release:
+  #   types: [published]
+
+  workflow_dispatch:
 
 name: push-docker-image-release
 
