--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,7 +176,7 @@ jobs:
       with:
         images: |
           ghcr.io/${{ github.repository }}
-          docker.io/${{ github.repository_owner }}/${{ github.repository }}
+          docker.io/${{ github.repository }}
         tags: |
           type=ref,event=tag
         flavor: |
