.github/workflows/release.yml added build-run-unit-tests=false

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,4 +13,5 @@ jobs:
     secrets: inherit # pass all secrets
     with:
       matrix-os: '["linux", "windows","darwin"]'
+      build-run-unit-tests: false
       build-cmd: cp ./any-sync-network/defaultTemplate.yml ./bin/
